# forschungspraktikum

./: .gitignore  README.md
code/: .gitignore  README.md  pyproject.toml
code/css_geodata_service/: config.py  utils.py
code/css_geodata_service/affected_persons/: Fast.ipynb  Test.ipynb  example.py  osmconf.ini
code/css_geodata_service/crop/: CropExample.py  python_tools.py  system_tools.py  utils.py
code/css_geodata_service/extract/: extract_layers_from_gpkg.py  flooded_buildings.py  python_tools.py  system_tools.py
code/css_geodata_service/generate/: buffer_polygon.py  interpolate_polygon.py  utils.py
code/css_geodata_service/helper/: utils.py
code/css_geodata_service/robustness_of_accessibility/: README.md  disrupted_graph.py  extract_osm.py  robustness_of_accessibility.py
code/css_geodata_service/robustness_of_accessibility/data/assets/: .gitignore
code/css_geodata_service/robustness_of_accessibility/data/input/: .gitignore
code/css_geodata_service/robustness_of_accessibility/data/input/Flooding/: .gitignore
code/css_geodata_service/robustness_of_accessibility/data/output/: .gitignore
code/css_geodata_service/robustness_of_accessibility/examples/: 00_RoA_simple_example.ipynb  example_dijkstra.py  sampling_test.py
code/css_geodata_service/robustness_of_accessibility/examples/notebooks/: 01_Extract_and_Persist_Data.ipynb  02_a_Construct_disrupted_Graph.ipynb  02_b_Visualize_Graphs.ipynb  03_RobustnessOfAccessibility.ipynb  04_AnalyzeResults.ipynb  notebook_utils.py
code/css_geodata_service/robustness_of_accessibility/utils/: analysis_utils.py  io_utils.py  models.py  utils.py
code/css_geodata_service/robustness_of_accessibility/visualization/: plot.py
expose/src/: document.tex  help.tex  main.bib  main.tex  references.bib
expose/src/sections/: 1_Deckblatt.tex  2_Problemstellung.tex  3_Zielsetzung_und_Erkenntnisinteresse.tex  5_Konzept.tex  7_Zeitplan.tex  (+5 more)
(+14 files in other folders)
