[project]
name = "css-geodata-service"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
  { name = "David kaub", email = "david.kaub@dfki.de" },
]

requires-python = ">=3.11,<4.0"

dependencies = [
    "geopandas>=1.0.1,<2.0.0",
    "shapely>=2.0.2,<3.0.0",
    "matplotlib>=3.8.2,<4.0.0",
    "contextily>=1.4.0,<2.0.0",
    "rasterio>=1.3.9,<2.0.0",
    "osmnx>=1.8.0,<2.0.0",
    "folium>=0.15.1,<1.0.0",
    "pydantic>=2.11.3,<3.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "scikit-learn>=1.3.2,<2.0.0",
    "pyrosm>=0.6.2,<1.0.0",
    "tqdm>=4.66.2,<5.0.0",
    "pydantic-settings>=2.8.1,<3.0.0"
]

# [project.scripts]
# start_roa = "css_geodata_service.robustness_of_accessibility.examples.example_dijkstra"

[dependency-groups]
dev = [
  "pytest>=8.3.3,<9.0",
  "pytest-asyncio>=0.24.0,<1.0",
  "pre-commit>=4.0.1,<5.0",
  "mypy>=1.13.0,<2.0",
  "ruff>=0.8.0,<1.0",
  "types-python-jose>=3.3.4.20240106,<4.0",
  "mongomock-motor>=0.0.36,<0.1.0",
  "pymarkdownlnt>=0.9.25,<1.0",
  "pydantic-to-typescript>=2.0.0,<3.0"
]

analysis = [
  "jupyter>=1.0.0,<2.0",
  "matplotlib>=3.9.2,<4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["css_geodata_service"]
exclude = ["assets", "secrets"]


# ------------------------------------------------------------------------------
# The rest of your dev-tool configs remain in [tool.*] tables, as before:
# ------------------------------------------------------------------------------
[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.pymarkdown.plugins.MD031]
enabled = true

[tool.pytest.ini_options]
markers = ["integration", "unit", "deprecated"]
asyncio_default_fixture_loop_scope = "function"

